# graphics2025

./: .gitignore  README.md
22551012张宏远/Homework1/: Readme.md
22551012张宏远/Homework1/opengl/: glad.c  main.cpp  opengl.vcxproj  opengl.vcxproj.filters
22551012张宏远/Homework2/: CMakeLists.txt  README.md  main.cpp
22551012张宏远/Homework2/include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
22551012张宏远/Homework3/: Project.sln  Readme.md
22551012张宏远/Homework3/opengl/: main.cpp  mesh.frag  mesh.vert  opengl.vcxproj  opengl.vcxproj.filters
22551012张宏远/Homework4/: Readme.md
22551012张宏远/Homework4/opengl/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Shader.cpp  Shader.h  floor.frag  floor.vert  light.frag  light.vert  main.cpp  mesh.frag  mesh.vert  opengl.vcxproj  opengl.vcxproj.filters  sky.frag  sky.vert  stb_image_write.h
22551013WeiXianghan/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt  vcpkg.json
22551013WeiXianghan/final_project/: car_game.cpp  readme.md
22551013WeiXianghan/homework_1/: colored_triangle.cpp  readme.md
22551013WeiXianghan/homework_2/: readme.md  solar_system.cpp
22551013WeiXianghan/homework_3/: model_loading.cpp  readme.md
22551013WeiXianghan/include/: root_directory.h  root_directory.h.in  shader.h
22551013WeiXianghan/include/car_game/: car.h  fixed_camera.h
22551013WeiXianghan/include/learnopengl/: camera.h
22551013WeiXianghan/resources/objects/: check_obj_origin.py
22551013WeiXianghan/resources/shaders/: light_and_shadow.fs
22551076张玮烨/Work1/: readme.md
22551076张玮烨/Work1/src/: main.cpp
22551076张玮烨/Work2/: readme.md
22551076张玮烨/Work2/include/glad/: glad.h
22551076张玮烨/Work2/src/: main.cpp
22551076张玮烨/Work3/: main.py  readme.md
22551076张玮烨/期末大作业/: readme.md
22551076张玮烨/期末大作业/Unity_3Dplane/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
22551089顾真瑜/: Makefile  README.md
22551089顾真瑜/final/: README.md
22551089顾真瑜/final/source/: export_presets.cfg  icon.svg.import  project.godot
22551089顾真瑜/final/source/brush/: brush.tres
22551089顾真瑜/final/source/models/: ground.glb.import
22551089顾真瑜/final/source/scenes/: ground.tscn  scene.tscn  snow_ball.tscn
22551089顾真瑜/final/source/script/: camera_follow.gd  snowball_controller.gd  trail_painter.gd
22551089顾真瑜/final/source/shader_material/: ground_shader_material.tres
22551089顾真瑜/final/source/shdaer/: ground_shader.gdshader
22551089顾真瑜/lab/: README.md
22551089顾真瑜/lab/include/glad/: glad.h
22551089顾真瑜/lab/shader/: objShader.fs  objShader.vs  planetShader.fs  simpleTextureShader.fs
22551089顾真瑜/lab/src/: camera.h  glMotion.cpp  glMotion.h  light.h  main.cpp  material.cpp  model.cpp  model.h
22551089顾真瑜/lab/src/scene_func/: Scene_Nanosuit.cpp  Scene_Triangle.cpp  scene_func.h
22551089顾真瑜/shader/: planetShader.vs  triangleShader.vs
22551089顾真瑜/src/: camera.cpp  camera.h  glMotion.cpp  main.cpp  material.h  mesh.cpp  mesh.h  shader.h  texture.h
22551089顾真瑜/src/scene_func/: Scene_SolarSystem.cpp  scene_func.h
22551112邓岳衡/HW01/: README.md  xmake.lua
22551112邓岳衡/HW01/src/: main.cpp
22551112邓岳衡/HW02/: README.md  xmake.lua
22551112邓岳衡/HW02/include/: easy_vulkan.hpp  glfw_wrapper.hpp  learn_vulkan.hpp  vulkan_buffer.hpp  vulkan_buffer_base.hpp  vulkan_descriptor.hpp  vulkan_device_memory.hpp  vulkan_helper.hpp  vulkan_image.hpp  vulkan_pipeline.hpp  vulkan_semaphore.hpp  vulkan_shader_module.hpp
22551112邓岳衡/HW02/include/misc/: camera.hpp  sphere.hpp  texture.hpp
22551112邓岳衡/HW02/include/util/: array_view.hpp  image_operation.hpp  vkresult_wrapper.hpp
22551112邓岳衡/HW02/shaders/: planet.vert
22551112邓岳衡/HW02/shaders/spv/: outline.vert.spv  picking.frag.spv  planet.frag.spv  planet.vert.spv  triangle.frag.spv
22551112邓岳衡/HW02/src/: glfw_wrapper.cpp  main.cpp
22551112邓岳衡/HW03/: README.md  xmake.lua
22551112邓岳衡/HW03/assets/nanosuit_reflection/: imgui.ini
22551112邓岳衡/HW03/include/: glfw_wrapper.hpp  learn_vulkan.hpp  vulkan_buffer.hpp  vulkan_command_buffer.hpp  vulkan_command_pool.hpp  vulkan_descriptor.hpp  vulkan_fence.hpp  vulkan_frame_buffer.hpp  vulkan_manager.hpp  vulkan_query.hpp  vulkan_render_pass.hpp  vulkan_sampler.hpp
22551112邓岳衡/HW03/include/misc/: camera.hpp  light.hpp  model.hpp  texture.hpp
22551112邓岳衡/HW03/shaders/: model.frag  model.vert  outline.frag  outline.vert  picking.frag  planet.frag  triangle.frag  triangle.vert
22551112邓岳衡/HW03/src/: glfw_wrapper.cpp  main.cpp  model.cpp  vulkan_manager.cpp
22551112邓岳衡/HW04/: CMakeLists.txt  README.md
22551112邓岳衡/HW04/renderer/: main.cpp
22551120段鸿邑/Final/: Camera.cpp  Final.cpp  README.md  camera.h
22551120段鸿邑/Final/Shaders/: blackhole.frag  fullscreen.vert
22551120段鸿邑/HW02/: Application.cpp  OpenGL 简易太阳系渲染项目.md
22551120段鸿邑/HW03/: readme.md
22551170王文杰/: GraduationProject.sln  README.md
22551170王文杰/GraduationProject/: GraduationProject.vcxproj  GraduationProject.vcxproj.filters
22551170王文杰/GraduationProject/Debug/: vc143.idb
22551170王文杰/GraduationProject/src/: Application.cpp  Callback.h  Camera.cpp  Camera.h  HW1.cpp  HW2.cpp  HW3.cpp  Mesh.cpp  Mesh.h  Model.cpp  Scene.cpp  Setting.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h
22551222王值/final/: .gitignore  README.md
22551222王值/final/include/: bg.h  bgRenderer.h  bindObject.hpp  box.h  camera.h  lightRenderer.hpp  objImport.h  portal.h  portalRenderer.h  renderAll.h  shader.h
22551222王值/final/src/: bg.cpp  bgRenderer.cpp  box.cpp  main.cpp  portal.cpp  portalRenderer.cpp  renderAll.cpp
22551222王值/hw1/: README.md
22551222王值/hw1/src/: 1.colors.fs  1.colors.vs  color3D.vs  main.cpp
22551222王值/hw2/: README.md
22551222王值/hw2/src/: main.cpp
22551222王值/hw3/: README.md
22551222王值/hw3/src/: main.cpp
22551366_zhangyuandong/: .gitignore  CMakeLists.txt  main.cpp
22551366_zhangyuandong/meshshader/: readme.md
22551366_zhangyuandong/第一次作业/: main.cpp
22551366_zhangyuandong/第三次作业/: README.md
22551366张元栋/: .gitignore  CMakeLists.txt
(+123 files in other folders)
